--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/ViewUsers.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/ViewUsers.cshtml
@@ -20,7 +20,10 @@
     }
 </table>
 
+@if (!User.IsInRole("Auditor"))
+{
+    <a asp-action="AddUserToBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Add users to budget code</a>
 
-<a asp-action="AddUserToBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Add users to budget code</a>
+    <a asp-action="DeleteUserFromBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Remove users from budget code</a>
+}
 
-<a asp-action="DeleteUserFromBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Remove users from budget code</a>
