--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
@@ -92,64 +92,65 @@
                             <td>@req.ReasonChosen</td>
                         }
                         <td>
-                            <a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">View Attachments</a>
+                            <a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">Attachments</a>
                         </td>
-                            }
-                            @if (!User.IsInRole("Purchasing"))
-                            {
-                                <td>@req.QuantityRequested</td>
-                                <td>@req.ItemName</td>
-                                <td>@req.Description</td>
-                                <td>@req.EstimatedCost</td>
-                                <td>@req.EstimatedTotal</td>
-
-                                    @if (Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any())
-                                    {
-
-                                        <td>@req.Chosen</td>
-                                        <td>@req.ReasonChosen</td>
-
-                                    }
-
-                                    <td>
-                                        <a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">View Attachments</a>
-                                    </td>
-                             }
-
-                          
-
-                        </tr>
-
                     }
-
-                </table>
-
-
-
-                @if (Model.StatusId == 1)
-                {
-                    <a asp-controller="Request" asp-action="AddItem" asp-route-orderId="@Model.Id" class="btn btn-primary">Add New Item</a>
-
-                    if (Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any() && Model.RequestsWithVendor.Count() < 3 && Model.StateContract == false)
+                    @if (!User.IsInRole("Purchasing"))
                     {
-                        <h4>You must add three competing items for orders over 3000</h4>
+                        <td>@req.QuantityRequested</td>
+                        <td>@req.ItemName</td>
+                        <td>@req.Description</td>
+                        <td>@req.EstimatedCost</td>
+                        <td>@req.EstimatedTotal</td>
 
+                        @if (Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any())
+                        {
+
+                            <td>@req.Chosen</td>
+                            <td>@req.ReasonChosen</td>
+
+                        }
+
+                        <td>
+                            <a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">Attachments</a>
+                        </td>
                     }
-                    else
-                    {
 
-                        <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Submit</a>
-                    }
 
-                }
 
-                @if (User.IsInRole("Purchasing") && Model.StatusName == "Approved")
-                {
-                    <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Mark As Ordered</a>
-                }
+                </tr>
 
             }
 
+        </table>
 
 
-        </div>
+
+        @if (Model.StatusId == 1)
+        {
+            <a asp-controller="Request" asp-action="AddItem" asp-route-orderId="@Model.Id" class="btn btn-primary">Add New Item</a>
+
+            if (Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any() && Model.RequestsWithVendor.Count() < 3 && Model.StateContract == false)
+            {
+                <h4>You must add three competing items for orders over 3000</h4>
+
+            }
+            else
+            {
+
+                <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Submit</a>
+            }
+
+        }
+
+        @if (User.IsInRole("Purchasing") && Model.StatusName == "Approved")
+        {
+            <a asp-controller="Request" asp-action="EditItems" asp-route-id="@Model.Id" class="btn btn-primary">Update Paid Cost</a>
+            <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Mark As Ordered</a>
+        }
+
+    }
+
+
+
+</div>
