purcahse update paid price

--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/EditItem.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/EditItem.cshtml
@@ -46,14 +46,14 @@
             {
 
                 <div class="form-group">
-                    <label class="control-label">Estimated Cost</label>
+                    <label class="control-label">Paid Cost</label>
                     <input asp-for="PaidCost" class="form-control" />
                     <span asp-validation-for="PaidCost" class="text-danger"></span>
                 </div>
 
 
                 <div class="form-group">
-                    <label class="control-label">Estimated Cost</label>
+                    <label class="control-label">Paid Total</label>
                     <input asp-for="PaidTotal" class="form-control" />
                     <span asp-validation-for="PaidTotal" class="text-danger"></span>
                 </div>
